Hello, everyone,
For documentation builds got error:
cd qtwinextras\ && ( if not exist Makefile C:\libQT-5.11-dev\build\qtbase\bin\qmake.exe -o Makefile C:\libQT-5.11-dev\build\qtwinextras\qtwinextras.pro ) && C:\Windows\jom.exe -f Makefile prepare_docs C:/libQT-5.11-dev/build/qtwinextras/src/winextras/doc/qtwinextras.qdocconf:16: (qdoc) error: Environment variable 'QT_INSTALL_HEADERS' undefined cd src\ && ( if not exist Makefile C:\libQT-5.11-dev\build\qtbase\bin\qmake.exe -o Makefile C:\libQT-5.11-dev\build\qtwinextras\src\src.pro ) && C:\Windows\jom.exe -f Makefile prepare_docs cd winextras\ && ( if not exist Makefile C:\libQT-5.11-dev\build\qtbase\bin\qmake.exe -o Makefile C:\libQT-5.11-dev\build\qtwinextras\src\winextras\winextras.pro ) && C:\Windows\jom.exe -f Makefile prepare_docs C:\Windows\jom.exe -f Makefile.Debug prepare_docs call C:\libQT-5.11-dev\build\qtwinextras\src\winextras\qtattributionsscanner_wrapper.bat C:/libQT-5.11-dev/build/qtwinextras --filter QDocModule=qtwinextras -o C:/libQT-5.11-dev/build/qtwinextras/src/winextras/codeattributions.qdoc call C:\libQT-5.11-dev\build\qtwinextras\src\winextras\qdoc_wrapper.bat -outputdir C:/libQT-5.11-dev/build/qtwinextras/doc/qtwinextras -installdir C:/libQT-5.11-dev/MSVC64DH/doc C:/libQT-5.11-dev/build/qtwinextras/src/winextras/doc/qtwinextras.qdocconf -prepare -indexdir C:/libQT-5.11-dev/build/qtbase/doc -no-link-errors -I. -I..\..\include -I..\..\include\QtWinExtras -I..\..\include\QtWinExtras\5.12.0 -I..\..\include\QtWinExtras\5.12.0\QtWinExtras -Itmp -IC:\libQT-5.11-dev\build\qtbase\include\QtGui\5.12.0 -IC:\libQT-5.11-dev\build\qtbase\include\QtGui\5.12.0\QtGui -IC:\libQT-5.11-dev\build\qtbase\include -IC:\libQT-5.11-dev\build\qtbase\include\QtGui -IC:\libQT-5.11-dev\build\qtbase\include\QtANGLE -IC:\libQT-5.11-dev\build\qtbase\include\QtCore\5.12.0 -IC:\libQT-5.11-dev\build\qtbase\include\QtCore\5.12.0\QtCore -IC:\libQT-5.11-dev\build\qtbase\include\QtCore -I.moc\debug -I"C:\Program Files (x86)\VulkanSDK\include" -IC:\libQT-5.11-dev\build\qtbase\mkspecs\win32-msvc Environment variable 'QT_INSTALL_HEADERS' undefined Aborting jom: C:\libQT-5.11-dev\build\qtwinextras\src\winextras\Makefile.Debug [prepare_docs] Error 1 jom: C:\libQT-5.11-dev\build\qtwinextras\src\winextras\Makefile [debug-prepare_docs] Error 2 jom: C:\libQT-5.11-dev\build\qtwinextras\src\Makefile [sub-winextras-prepare_docs_ordered] Error 2 jom: C:\libQT-5.11-dev\build\qtwinextras\Makefile [sub-src-prepare_docs] Error 2
which relate to recently merged Change #226037.
Reproduced for:
- builds on Windows,
not reproduced for:
Similar P0 issue was recently fixed Qt for ActiveX builds on Linux (see -QTBUG-67550
Best,
Alexander
- duplicates
- 
                    QTBUG-67550 activeqt.qdocconf:15: (qdoc) error: Environment variable 'QT_INSTALL_HEADERS' undefined -         
- Closed
 
-         
- is duplicated by
- 
                    QTBUG-68473 Building docs fails for specific modules -         
- Closed
 
-         
- 
                    QTBUG-68560 Qt 5.11.0 builds and installs OK, make docs fails -         
- Closed
 
-