Doc: Get rid of QT_INSTALL_HEADERS in documentation config

The use of QT_INSTALL_HEADERS caused documentation build failures
in certain configurations. Use an alternative method to pass the
required include paths to QDoc; add doc.pro and make 'doc' a proper
subproject.

Also fix the remaining documentation warnings.

Task-number: QTBUG-67925
Change-Id: I68ce63bcac4ab7f70468535fe53057f51525ca2e
Reviewed-by: Martin Smith <martin.smith@qt.io>